--- a/lib/Dancer/Session/CHI.pod
+++ b/lib/Dancer/Session/CHI.pod
@@ -9,7 +9,7 @@ Dancer::Session::CHI - CHI-based session engine for Dancer
 =for test_synopsis
 sub set {}
 
-In a Dancer app:
+In a L<Dancer> application:
 
 	set plugins          => { 'Cache::CHI' => { driver => 'Memory', global => 1 } };
 	set session          => 'CHI';
