--- a/lib/Dancer/Session/CHI.pod
+++ b/lib/Dancer/Session/CHI.pod
@@ -16,7 +16,7 @@ In a L<Dancer> application:
 	set session_expires  => '1 hour';
 	set chi_session_opts => { use_plugin => 1 };
 
-In a C<config.yml>:
+In a F<config.yml>:
 
 	plugins:
 		Cache::CHI:
@@ -40,8 +40,8 @@ collection.
 Dancer::Session::CGI accepts a C<use_plugin> option that defaults to 0. If set to 1, L<Dancer::Plugin::Cache::CHI>
 will be used directly for session management, with no changes made to the plugin's configuration.
 
-If C<use_plugin> is left false, all other options are passed through to construct a new CHI object, even if
-Dancer::Plugin::Cache::CHI is also in use. This new object needn't use the same driver as the plugin.
+If C<use_plugin> is left false, all other options are passed through to construct a new L<CHI> object, even if
+L<Dancer::Plugin::Cache::CHI> is also in use. This new object needn't use the same driver as the plugin.
 
 =head1 CLASS METHODS
 
@@ -71,5 +71,6 @@ Richard Simões <rsimoes at cpan dot org>
 
 Copyright © 2011 Richard Simões.
 
-This module is released under the terms of the Artistic License 2.0 (http://www.perlfoundation.org/artistic_license_2_0)
+This module is released under the terms of the
+<Artistic License 2.0|http://www.perlfoundation.org/artistic_license_2_0>
 and may be modified and/or redistributed under the same or any compatible license.
