--- a/lib/Dancer/Session/CHI.pod
+++ b/lib/Dancer/Session/CHI.pod
@@ -32,12 +32,12 @@ In a F<config.yml>:
 
 This module leverages the great L<CHI> via L<Dancer::Plugin::Cache::CHI> to provide session management for
 L<Dancer> applications. Just as L<Dancer::Session::KiokuDB> opens up L<KiokuDB>'s full range of KiokuDB::Backend*
-modules to be used in Dancer session management, Dancer::Session::CHI makes available the complete CHI::Driver::*
+modules to be used in Dancer session management, C<Dancer::Session::CHI> makes available the complete CHI::Driver::*
 collection.
 
 =head1 CONFIGURATION
 
-Dancer::Session::CGI accepts a C<use_plugin> option that defaults to 0. If set to 1, L<Dancer::Plugin::Cache::CHI>
+C<Dancer::Session::CHI> accepts a C<use_plugin> option that defaults to 0. If set to 1, L<Dancer::Plugin::Cache::CHI>
 will be used directly for session management, with no changes made to the plugin's configuration.
 
 If C<use_plugin> is left false, all other options are passed through to construct a new L<CHI> object, even if
@@ -53,7 +53,7 @@ Creates a new session object and returns it.
 
 Returns the session object containing an ID of $id.
 
-=head1 OBJECT METHODS:
+=head1 OBJECT METHODS
 
 =head2 flush()
 
@@ -69,8 +69,6 @@ Richard Simões <rsimoes at cpan dot org>
 
 =head1 COPYRIGHT AND LICENSE
 
-Copyright © 2011 Richard Simões.
-
-This module is released under the terms of the
+Copyright © 2011 Richard Simões. This module is released under the terms of the
 L<Artistic License 2.0|http://www.perlfoundation.org/artistic_license_2_0>
 and may be modified and/or redistributed under the same or any compatible license.
