--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Dancer-Session-CHI
 
 {{$NEXT}}
+	- Removed a couple MooseX:: dependencies and Perl v5.10-related pragmas
 
 v0.0.3    2011-10-24 05:03:13 America/Chicago
 	- Removed calls to Dancer v1 deep guts in anticipation of changes in Dancer v2.
