rewrite without moose

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Dancer-Session-CHI
 
 {{$NEXT}}
+	- Module fully reimplemented without Moose.
+	- Fixed issue where CHI, when using file-based cache systems, would place
+	  the session directory in $app_dir/public if given a relative path.
 
 v0.1.1    2011-11-08 13:03:37 CST6CDT
 	- Remove unused Scalar::Util prereq
