--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Dancer-Session-CHI
 
 {{$NEXT}}
+    - Fixed Dancer import.
+    - Switched to using &Dancer::error instead of &Carp::croak.
+    - Promoted to full release.
 
 v0.1.5    2013-02-26 14:38:13 America/Chicago
     - Added C<purge> method to give access to CHI's method of the same name.
